force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Tenant-originated maintenance request; entry point of the event-driven lifecycle.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>