force-app/main/default/objects/Service_Request__c/fields/Converted_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Converted_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Back-reference once converted</description>
    <label>Converted Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>