force-app/main/default/objects/Service_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Tenant&apos;s free text</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>