force-app/main/default/objects/Service_Request__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Idempotency key from portal; selectivity anchor for LDV</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>