force-app/main/default/objects/Service_Request__c/fields/Requested_Slot__c.field-meta.xml
<CustomField>
    <fullName>Requested_Slot__c</fullName>
    <description>Tenant&apos;s preferred time</description>
    <label>Requested Slot</label>
    <type>DateTime</type>
</CustomField>