force-app/main/default/objects/Service_Request__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Owning tenant (isolation key)</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>